# Xyra

./: .env.example  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  package.json  pytest.ini  supervisord.conf  test_agent_service_billing.py  test_billing_models.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: azure-dev-deploy.yml
backend/: DATA_PROCESSING_README.md  SCHEMA_MIGRATION_SUMMARY_28_5_25.md  alembic.ini  init_db.py  main.py  requirements.txt
backend/alembic/: env.py
backend/scripts/: migrate_and_init.py  run_migrations.py  test_email_config.py  test_email_features.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_billing_models.py  test_email_service.py  test_enhanced_email_service.py  test_enhanced_outcome_pricing.py  test_invoices.py  test_organizations.py  test_users.py  test_workflow_billing_models.py
documentation/: AGENT_BILLING_MIGRATION_SUMMARY.md  ENHANCED_ACTIVITY_BILLING_IMPLEMENTATION.md  FRONTEND_ACTIVITY_BILLING_UPDATES.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  OUTCOME_BASED_PRICING_FEATURES.md  api_keys_guide.md  code_explanation.md  email_functionality.md  email_service_configuration.md  email_service_enhancements.md  email_service_enterprise.md  email_service_usage.md  getting_started.md
frontend/: .env.example  .eslintignore  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  (+2 more)
scripts/: cleanup-dist.sh  deploy-azure.sh  setup-dev.sh
test_agent/: azure_agent.py  test_agent.py
xyra_client/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  client.py  examples.py  install.sh  publish.sh  pyproject.toml  requirements.txt  setup.py  setup.py.backup  validate_package.sh
xyra_client.egg-info/: PKG-INFO  SOURCES.txt
xyra_client/guides/: PUBLICATION_CHECKLIST.md  PUBLISH_GUIDE.md  PYPI_GUIDE.md  QUICK_START.md
xyra_client/xyra_client/: __init__.py
xyra_client/xyra_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+192 files in other folders)
